# uniteocr

./: .gitignore  README.rst  pyproject.toml  setup.cfg
tests/: test_uniteocr.py
uniteocr/: __init__.py  __main__.py
