[metadata]
name = uniteocr
version = 0.1.0
author = Balint Erdosi
description = Fewliner to automate my workflow of merging scanned pages and running OCR on them.
long_description = file: README.rst, LICENSE.rst
long_description_content_type = text/x-rst
license = Mozilla Public License 2.0 (MPL 2.0)
url = https://github.com/berdosi/uniteocr
license_files = LICENSE.rst
classifiers = 
    License :: OSI Approved :: Mozilla Public License 2.0 (MPL 2.0)
